# experts-models

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: factbank-ci.yml
v2/: ARCHITECTURES.md  BUILD-AN-EXPERT.md  GENERATED.md  README.md
v2/bake/: serve_factbank.ps1
v2/decisions/: CARD-MINING-BLUEPRINT.md  CARD-MINING-FINDINGS.md  DATA-STRUCTURE-RESEARCH.md  FACTBANK-SHIPPING-BLUEPRINT.md  LANGUAGES.md  NEW-DB-RESEARCH.md  PACKAGING-BLUEPRINT.md  REAL-SECURITY-EXPERT-PLAN.md  SCHEMA-V3.md  TICKET-thinking-on-enablement.md
v2/extractor/: BLUEPRINT.md  EXTRACTOR-2.0.md  EXTRACTOR-SPEC.md  PROGRESS.md  README.md  SCHEMA.md  anchor_facts.py  appsec_bench_run.py  appsec_bench_v3.py  appsec_core.py  appsec_mastg.py  appsec_merge.py  appsec_mine.py  appsec_mine_crypto_net.py  appsec_owasp.py  appsec_remediate.py  appsec_rustsec.py  appsec_sast.py  appsec_servetest.py  build_v3.py  build_v3_assemble.py  build_v3_assemble2.py  build_v3_llm.py  build_v3_tier1.py  build_v3_usecases.py  check.py  codeql_mine.py  dedupe.py  embed_facts.py  experts_to_package.py  extract.py  fix_dup_ids.py  lookup.py  refine.py  repair.py  retriever2.py  retriever3.py  retriever_f.py  retriever_v3.py  run.py  (+3 more)
v2/package/: README.md  pyproject.toml
v2/package/factbank/: __init__.py  bake.py  bank.py  bankio.py  cli.py  config.py  extract.py  factbank.toml  factloop.py  gates.py  lmstudio_embed.py  loop.py  native_tags.py  server.py  spawn.py  watch.py
v2/package/tests/: test_smoke.py
v2/papers/: FACTBANK-DRAFT.md  FactBank-1-Idea-Paper.docx  README.md  (+10 more)
(+411 files in other folders)
